# StaticTrie

./: CMakeLists.txt  README.md
source/: StaticTrie.cpp  StaticTrie.h
